--- a/src/UniversalToolBox/Shared/NavMenu.razor
+++ b/src/UniversalToolBox/Shared/NavMenu.razor
@@ -12,8 +12,8 @@
             <MudNavLink Href="/rsa-key-pair-generator">RSA 密钥对生成器</MudNavLink>
         </MudNavGroup>
         <MudNavGroup Title="Converter" Expanded="true" Icon="@Icons.Material.Outlined.TextSnippet">
-            <MudNavLink Href="/date-converter">时间转换器</MudNavLink>
-            <MudNavLink Href="/base-converter">进制转换器</MudNavLink>
+            @* <MudNavLink Href="/date-converter">时间转换器</MudNavLink> *@
+            @* <MudNavLink Href="/base-converter">进制转换器</MudNavLink> *@
             <MudNavLink Href="/base64-string-converter">Base64 字符串转换</MudNavLink>
             <MudNavLink Href="/base64-file-converter">Base64 文件转换器</MudNavLink>
         </MudNavGroup>
