--- a/src/UniversalToolBox/Pages/Base64StringConverter.razor
+++ b/src/UniversalToolBox/Pages/Base64StringConverter.razor
@@ -3,7 +3,8 @@
 @inject ISnackbar Snackbar
 @inject IJSRuntime JsRuntime
 
-<MudGrid>
+<MudText Class="mt-5" Typo="Typo.h5">Base64字符串转换</MudText>
+<MudGrid Class="mt-5">
     <MudItem xs="6">
         <MudCard>
             <MudCardHeader>
