--- a/src/UniversalToolBox/Pages/RsaKeyPairGenerator.razor
+++ b/src/UniversalToolBox/Pages/RsaKeyPairGenerator.razor
@@ -3,12 +3,9 @@
 @using System.Text
 @inject ISnackbar Snackbar
 @inject IJSRuntime JsRuntime
-<MudCard>
-    <MudCardHeader>
-        <CardHeaderContent>
-            <MudText Typo="Typo.h6">RSA 密钥对生成器</MudText>
-        </CardHeaderContent>
-    </MudCardHeader>
+
+<MudText Class="mt-5" Typo="Typo.h5">RSA 密钥对生成器</MudText>
+<MudCard Class="mt-5">
     <MudCardContent>
         <MudGrid>
             <MudItem xs="12">
