--- a/src/UniversalToolBox/Shared/NavMenu.razor
+++ b/src/UniversalToolBox/Shared/NavMenu.razor
@@ -21,11 +21,11 @@
             <MudNavLink Href="/url-encoder">URL 编码/解码</MudNavLink>
             <MudNavLink Href="/html-entities">HTML转义</MudNavLink>
             <MudNavLink Href="/url-parser">URL解析器</MudNavLink>
-            <MudNavLink Href="/otp-generator">OTP 码生成</MudNavLink>
-            <MudNavLink Href="/jwt-parser">JWT 转换器</MudNavLink>
+            @* <MudNavLink Href="/otp-generator">OTP 码生成</MudNavLink> *@
+            @* <MudNavLink Href="/jwt-parser">JWT 转换器</MudNavLink> *@
         </MudNavGroup>
-        <MudNavGroup Title="Images" Expanded="true" Icon="@Icons.Material.Outlined.Image">
-            <MudNavLink Href="/ocr-recognition">OCR 识别</MudNavLink>
-        </MudNavGroup>
+        @* <MudNavGroup Title="Images" Expanded="true" Icon="@Icons.Material.Outlined.Image"> *@
+        @*     <MudNavLink Href="/ocr-recognition">OCR 识别</MudNavLink> *@
+        @* </MudNavGroup> *@
     </MudNavMenu>
 </MudPaper>
